--- a/index.css
+++ b/index.css
@@ -119,6 +119,9 @@ header p{
 
 .footer-img{
     background-image: url('./assets/footer_img.jpg');
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+    background-size:cover;
     height: 40vh;
     width: 100%;
     margin-top: 60px;
